[package]
name = "steering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.3"
bevy_pancam = "0.8.0"
bevy_prototype_debug_lines = "0.10.1"
bevy_rapier2d = "0.21.0"
rand = "0.8.5"
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
ndarray-npy = "0.7.0"
ndarray-linalg = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.6.4"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
